# catalyst

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  ARCHITECTURE.md  BI_UX_RESEARCH.md  COST_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIXES.md  DEPLOY_NOW.md  DUCKDB_MIGRATION.md  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KOYEB.md  KOYEB_DEPLOYMENT.md  KOYEB_IMPLEMENTATION.md  KOYEB_QUICKSTART.md  Makefile  QUICKSTART.md  README.md  RENDER_FIX.md  RENDER_VALIDATION.md  TESTING.md  agents.md  deploy-cli.sh  deploy-koyeb.sh  deploy-render.sh  deploy.sh  deploy_render.py  docker-compose.yml  koyeb.yaml  render.yaml  validate-koyeb.sh  validate-render.sh  verify-deployment.sh
.claude/skills/: code-quality.md  code-style.md  constants-config.md  core-principles.md  documentation-philosophy.md  established-libraries.md  fastapi-python.md  general-best-practices.md  git-operations.md  llm-eval.md  (+8 more)
.koyeb/: config.yaml
api/: .gitignore  pyproject.toml  requirements.txt  test_api.py
api/app/: __init__.py  analyzer.py  datasets.py  main.py
backend/: .env  .env.example  Dockerfile  Dockerfile.prod  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  test_api.py
frontend/: .env  .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
tests/: integration_test.py
web/: biome.json  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
(+55 files in other folders)
