[project]
name = "catalyst-api"
version = "0.1.0"
description = "Catalyst api services"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.109.1",
  "uvicorn[standard]==0.24.0",
  "pydantic==2.5.0",
  "requests==2.31.0",
  "pandas==2.1.3",
  "numpy==1.26.2",
  "python-dotenv==1.0.0",
  "httpx==0.25.1",
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "ruff==0.15.0",
]
